<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/recorder_activator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/toolbar_background"
                android:elevation="10dp"
                android:padding="20dp"
                android:text="Activate Call Recording"
                android:textColor="@android:color/white" />
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:elevation="7dp"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/audio"
                        android:textColor="@color/accent"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/ll_audio_source"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_selector"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_margin="25dp"
                            android:scaleType="centerInside"
                            android:src="@mipmap/ic_audio2" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/audio_source"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/audio_source_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:text="Mic"
                            android:textColor="@color/accent"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="65dp"
                        android:background="@color/divider_semi_trans" />

                    <LinearLayout
                        android:id="@+id/ll_audio_channel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_selector"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_margin="25dp"
                            android:scaleType="centerInside"
                            android:src="@mipmap/ic_audio1" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/audio_channel"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/audio_channel_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:text="Mono"
                            android:textColor="@color/accent"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="65dp"
                        android:background="@color/divider_semi_trans" />

                    <LinearLayout
                        android:id="@+id/ll_audio_format"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_selector"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_margin="25dp"
                            android:scaleType="centerInside"
                            android:src="@mipmap/ic_audio_file" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/audio_format"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/audio_format_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:text="AMR"
                            android:textColor="@color/accent"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:elevation="7dp"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="Volume"
                        android:textColor="@color/accent"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_selector"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_margin="25dp"
                            android:scaleType="centerInside"
                            android:src="@mipmap/ic_speaker" />

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/auto_speaker_enable"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:text="Activate automatic speaker during call"
                            android:textColor="@color/secondary_text" />
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="65dp"
                        android:background="@color/divider_semi_trans" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_selector"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_margin="25dp"
                            android:scaleType="centerInside"
                            android:src="@mipmap/ic_max_volume" />

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/auto_max_volume"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:text="Activate recording volume to the max"
                            android:textColor="@color/secondary_text" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:elevation="7dp"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/password_protection"
                        android:textColor="@color/accent"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_selector"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_margin="25dp"
                            android:scaleType="centerInside"
                            android:src="@mipmap/ic_password" />

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/password_enable"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:text="Activate Password protection"
                            android:textColor="@color/secondary_text" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="65dp"
                        android:background="@color/divider_semi_trans" />

                    <LinearLayout
                        android:id="@+id/ll_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_selector"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_margin="25dp"
                            android:scaleType="centerInside"
                            android:src="@mipmap/ic_password_change" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/change_password"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="65dp"
                        android:background="@color/divider_semi_trans" />

                    <LinearLayout
                        android:id="@+id/ll_security_q"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_selector"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_margin="25dp"
                            android:scaleType="centerInside"
                            android:src="@mipmap/ic_security_question" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Set Security question"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>